# auto-pcb

./: .gitignore  .gitmodules  README.md  dockerfile  dockerfile.mirror
.github/workflows/: docker.yml
examples/: README
examples/test_data/bm1/: bm1.routed.kicad_pcb  bm1.unrouted.kicad_pcb
examples/test_data/bm10/: bm10.routed.kicad_pcb  bm10.routed.kicad_prl  bm10.routed.kicad_pro  bm10.unrouted.kicad_pcb  bm10.unrouted.kicad_prl  bm10.unrouted.kicad_pro
examples/test_data/bm11/: bm11.routed.kicad_pcb  bm11.routed.kicad_prl  bm11.routed.kicad_pro  bm11.unrouted.kicad_pcb  bm11.unrouted.kicad_prl  bm11.unrouted.kicad_pro
examples/test_data/bm2/: bm2.routed.kicad_pcb  bm2.unrouted.kicad_pcb  bm2.unrouted.kicad_pro
examples/test_data/bm3/: bm3.routed.kicad_pcb  bm3.routed.kicad_prl  bm3.routed.kicad_pro  bm3.unrouted.kicad_pcb  bm3.unrouted.kicad_prl  bm3.unrouted.kicad_pro
examples/test_data/bm4/: bm4.routed.kicad_pcb  bm4.routed.kicad_prl  bm4.routed.kicad_pro  bm4.unrouted.kicad_pcb
examples/test_data/bm5/: bm5.routed.kicad_pcb  bm5.routed.kicad_prl  bm5.routed.kicad_pro  bm5.unrouted.kicad_pcb  bm5.unrouted.kicad_prl  bm5.unrouted.kicad_pro
examples/test_data/bm6/: bm6.routed.kicad_pcb  bm6.routed.kicad_prl  bm6.routed.kicad_pro  bm6.unrouted.kicad_pcb  bm6.unrouted.kicad_prl  bm6.unrouted.kicad_pro
scripts/: README  sz_folder.py
vpcb/: config.json  run.py  run_regression.py
vpcb/parser/: Kicad2Dsn.py  README.md  Ses2Kicad.py
vpcb/placer/: README
vpcb/placer/ADSAPlace/: .gitignore  CMakeLists.txt  README.md  element.cpp  element.hpp  main.cpp  module.cpp  module.hpp  pin.hpp  placer.cpp  placer.hpp  readFiles.cpp  readFiles.hpp
vpcb/placer/ADSAPlace/bench/center_bench/: center.bm1.kicad_pcb  center.bm10.kicad_pcb  center.bm11.kicad_pcb  center.bm2.kicad_pcb  center.bm3.kicad_pcb  center.bm4.kicad_pcb  center.bm5.kicad_pcb  center.bm6locked.kicad_pcb  center.bm7.kicad_pcb  center.bm8.kicad_pcb  center.bm9.kicad_pcb
vpcb/placer/ADSAPlace/bench/greedy_bench/: greedy.bm1.kicad_pcb  greedy.bm10.kicad_pcb  greedy.bm11.kicad_pcb  greedy.bm2.kicad_pcb  greedy.bm3.kicad_pcb  greedy.bm4.kicad_pcb  greedy.bm5.kicad_pcb  greedy.bm6locked.kicad_pcb  greedy.bm7.kicad_pcb  greedy.bm8.kicad_pcb  greedy.bm9.kicad_pcb
vpcb/placer/ADSAPlace/bench/my_bench/: eda1.kicad_pcb  eda10.kicad_pcb  eda11.kicad_pcb  eda2.kicad_pcb  eda3.kicad_pcb  eda4.kicad_pcb  eda5.kicad_pcb  eda6.kicad_pcb  eda7.kicad_pcb  eda8.kicad_pcb  eda9.kicad_pcb
vpcb/placer/ADSAPlace/bench/random_bench/: random.bm1.kicad_pcb  random.bm2.kicad_pcb  random.bm3.kicad_pcb  random.bm4.kicad_pcb  random.bm5.kicad_pcb  random10.kicad_pcb  random11.kicad_pcb  random6.kicad_pcb  random7.kicad_pcb  random8.kicad_pcb  random9.kicad_pcb
vpcb/placer/ADSAPlace/bench/raw_bench/: bm6locked.kicad_pcb
vpcb/placer/ADSAPlace/bench/spiral_bench/: spiral.bm1.kicad_pcb  spiral.bm10.kicad_pcb  spiral.bm11.kicad_pcb  spiral.bm2.kicad_pcb  spiral.bm3.kicad_pcb  spiral.bm4.kicad_pcb  spiral.bm5.kicad_pcb  spiral.bm6locked.kicad_pcb  spiral.bm7.kicad_pcb  spiral.bm8.kicad_pcb  spiral.bm9.kicad_pcb
vpcb/placer/ADSAPlace/database/: CMakeLists.txt  PcbDB.py  PcbDB_wrapper.cpp
vpcb/placer/ADSAPlace/drawing/: PlotDraw.py  asq.py  draw_sigma.py  plot1.py  plot2.py  plot3.py  plot4.py  temperature_draw.py
vpcb/placer/ADSAPlace/router/: BoardGrid.cpp  BoardGrid.h  CMakeLists.txt  DesignRuleChecker.cpp  DesignRuleChecker.h  GridBasedRouter.cpp  GridBasedRouter.h  GridCell.h  GridDiffPairNet.cpp  GridNetclass.h  GridPath.cpp  GridPath.h  GridPin.h  IncrementalSearchGrids.h  MultipinRoute.cpp  MultipinRoute.h  PostProcessing.cpp  PostProcessing.h  globalParam.cpp  globalParam_router.h  main.cpp  util_router.h
vpcb/placer/ADSAPlace/router/database/: CMakeLists.txt
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/: CMakeLists.txt
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/adjust_node_area/: CMakeLists.txt
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/dct/: CMakeLists.txt
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/draw_place/: CMakeLists.txt
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/draw_place/src/: PlaceDrawer.h  draw_place.cpp  draw_place.h
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/electric_potential/: CMakeLists.txt
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/electric_potential/src/: density_function.h  electric_density_map_cuda.cpp  electric_density_map_cuda_kernel.cu  electric_force_cuda_kernel.cu
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/hpwl/: CMakeLists.txt
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/legality_check/: CMakeLists.txt
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/legality_check/src/: legality_check.h
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/logsumexp_wirelength/: CMakeLists.txt
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/macro_legalize/: CMakeLists.txt
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/macro_legalize/src/: hannan_legalize.h  lp_legalize.h  macro_legalize.cpp
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/move_boundary/: CMakeLists.txt
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/pin_pos/: CMakeLists.txt
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/pin_pos/src/: pin_pos.cpp  pin_pos_cuda_kernel.cu
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/pin_utilization/: CMakeLists.txt
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/pin_weight_sum/: CMakeLists.txt
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/pinrudy/: CMakeLists.txt
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/place_io/: CMakeLists.txt
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/rudy/: CMakeLists.txt
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/rudy/src/: rudy_cuda.cpp  rudy_cuda_kernel.cu
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/utility/src/: defs.h  legalization_db.h  print.cuh
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/weighted_average_wirelength/: CMakeLists.txt
vpcb/placer/AutoDMPPCB/DREAMPlacePCB/ops_src/weighted_average_wirelength/src/: weighted_average_wirelength_cuda_merged_kernel.cu  weighted_average_wirelength_merged.cpp
vpcb/router/: README
(+551 files in other folders)
